# CBR

./: .gitignore  CMakeLists.txt  README.md  TODO  build_and_run.sh  build_only.sh  showLog.bat  update.sh
config/: config.json
projects/CBRMain/: CMakeLists.txt
projects/CBRMain/inc/CBRMain/: board_rotation_experiment.h  find_black_squares.h  homography.h  logging.h
projects/CBRMain/src/: board_rotation_experiment.cpp  find_black_squares.cpp  homography.cpp  logging.cpp  main.cpp
projects/cbr_test/: CMakeLists.txt
projects/cbr_test/inc/cbr_test/: test.h
projects/cbr_test/src/: test.cpp
projects/common/: CMakeLists.txt
projects/common/inc/cereal/: macros.hpp
projects/common/inc/cereal/archives/: binary.hpp  json.hpp  xml.hpp
projects/common/inc/cereal/details/: polymorphic_impl.hpp  static_object.hpp
projects/common/inc/cereal/types/: optional.hpp
projects/common/inc/common/: archive_directory.h  config.h  counter.h  cyclic_container.h  debugbreak.h  exceptions.h  file_operation.h  logging.h  pimpl.h  time.h  viz2d.h
projects/common/inc/common/playground/: file_operation_playground.h  json_playground.h
projects/common/inc/utf8/: u8.h
projects/common/src/: archive_directory.cpp  config.cpp  counter.cpp  cyclic_container.cpp  debugbreak.cpp  exceptions.cpp  file_operation.cpp  logging.cpp  time.cpp  viz2d.cpp
projects/common/src/playground/: file_operation_playground.cpp  json_playground.cpp
projects/fw/: CMakeLists.txt
projects/fw/inc/cereal/: macros.hpp
projects/fw/inc/cereal/archives/: binary.hpp  json.hpp  xml.hpp
projects/fw/inc/cereal/details/: helpers.hpp  polymorphic_impl.hpp  static_object.hpp
projects/fw/inc/cereal/types/: optional.hpp
projects/fw/inc/fw/: archive_collection.h  logging.h  time.h
projects/fw/inc/optional/: optional.hpp
projects/fw/inc/utf8/: u8.h
projects/fw/src/: logging.cpp  time.cpp  viz2d.cpp
projects/imgproc/: CMakeLists.txt
projects/imgproc/inc/imgproc/: apply_corner_cluster_filtering.h  apply_size_filtering.h  complete_missing_squares.h  find_3d_chessboard.h  find_black_squares.h  find_edge_squares.h  find_homography_by_squares.h  find_incomplete_square_edges.h  find_raw_squares.h  find_square_contours.h  homography.h  imgproc.h  linear_regression.h  order_squares.h  read_image.h  square.h
projects/imgproc/inc/imgproc/test/: square_filtering_test.h  square_ordering_test.h
projects/imgproc/inc/imgproc/tests/: chessboard_homography_unittests.h
projects/imgproc/src/: apply_corner_cluster_filtering.cpp  apply_size_filtering.cpp  board_rotation_experiment.cpp  complete_missing_squares.cpp  find_3d_chessboard.cpp  find_black_squares.cpp  find_edge_squares.cpp  find_homography_by_squares.cpp  find_incomplete_square_edges.cpp  find_missing_squares.cpp  find_raw_squares.cpp  find_square_contours.cpp  homography.cpp  imgproc.cpp  linear_regression.cpp  order_squares.cpp  read_image.cpp  square.cpp
projects/imgproc/src/test/: square_filtering_test.cpp  square_ordering_test.cpp
projects/imgproc/src/tests/: chessboard_homography_unittests.cpp
projects/math_utils/: CMakeLists.txt
projects/math_utils/inc/math_utils/: functional.h  geometry.h  kmeans.h  line.h  linear_regression.h  math.h  matrix.h  point.h  simplex_optimizer.h  square.h
projects/math_utils/inc/math_utils/tests/: matrix_unittests.h  simplex_optimizer_unittest.h  triangle_contains_unittest.h
projects/math_utils/src/: functional.cpp  geometry.cpp  gradient_descent_optimizer.cpp  kmeans.cpp  line.cpp  linear_regression.cpp  math.cpp  matrix.cpp  point.cpp  simplex_optimizer.cpp  square.cpp
projects/math_utils/src/tests/: matrix_unittests.cpp  simplex_optimizer_unittest.cpp  triangle_contains_unittest.cpp
projects/recog/: CMakeLists.txt
projects/recog/src/: recog.cpp
tools/: rename_all_images_in_dir.sh
tools/buildTools/: compilation_manager.py  compilation_parser.py
